pa3/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> classes
Rule 2     classes -> class SEMI classes
Rule 3     classes -> class SEMI
Rule 4     class -> CLASS TYPE INHERITS TYPE LBRACE features RBRACE
Rule 5     class -> CLASS TYPE LBRACE features RBRACE
Rule 6     features -> feature SEMI features
Rule 7     features -> <empty>
Rule 8     feature -> IDENTIFIER LPAREN formals RPAREN COLON TYPE LBRACE expr RBRACE
Rule 9     feature -> IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expr RBRACE
Rule 10    feature -> formal LARROW expr
Rule 11    feature -> formal
Rule 12    formals -> formal COMMA formals
Rule 13    formals -> formal
Rule 14    formal -> IDENTIFIER COLON TYPE
Rule 15    expr -> IDENTIFIER LARROW expr
Rule 16    expr -> expr AT TYPE DOT dispatch
Rule 17    expr -> expr DOT dispatch
Rule 18    expr -> dispatch
Rule 19    dispatch -> IDENTIFIER LPAREN exprs RPAREN
Rule 20    dispatch -> IDENTIFIER LPAREN RPAREN
Rule 21    exprs -> expr COMMA exprs
Rule 22    exprs -> expr
Rule 23    expr -> IF expr THEN expr ELSE expr FI
Rule 24    expr -> WHILE expr LOOP expr POOL
Rule 25    expr -> LBRACE exprsemi RBRACE
Rule 26    exprsemi -> expr SEMI exprsemi
Rule 27    exprsemi -> expr SEMI
Rule 28    expr -> LET binding bindings IN expr
Rule 29    binding -> formal LARROW expr
Rule 30    binding -> formal
Rule 31    bindings -> COMMA formal bindings
Rule 32    bindings -> <empty>
Rule 33    expr -> CASE expr OF cases ESAC
Rule 34    cases -> IDENTIFIER COLON TYPE RARROW expr SEMI cases
Rule 35    cases -> IDENTIFIER COLON TYPE RARROW expr SEMI
Rule 36    expr -> NEW TYPE
Rule 37    expr -> ISVOID expr
Rule 38    expr -> expr PLUS expr
Rule 39    expr -> expr MINUS expr
Rule 40    expr -> expr TIMES expr
Rule 41    expr -> expr DIVIDE expr
Rule 42    expr -> TILDE expr
Rule 43    expr -> expr LT expr
Rule 44    expr -> expr LE expr
Rule 45    expr -> expr EQUALS expr
Rule 46    expr -> NOT expr
Rule 47    expr -> LPAREN expr RPAREN
Rule 48    expr -> IDENTIFIER
Rule 49    expr -> INTEGER
Rule 50    expr -> STRING
Rule 51    expr -> TRUE
Rule 52    expr -> FALSE

Terminals, with rules where they appear

AT                   : 16
CASE                 : 33
CLASS                : 4 5
COLON                : 8 9 14 34 35
COMMA                : 12 21 31
DIVIDE               : 41
DOT                  : 16 17
ELSE                 : 23
EQUALS               : 45
ESAC                 : 33
FALSE                : 52
FI                   : 23
IDENTIFIER           : 8 9 14 15 19 20 34 35 48
IF                   : 23
IN                   : 28
INHERITS             : 4
INTEGER              : 49
ISVOID               : 37
LARROW               : 10 15 29
LBRACE               : 4 5 8 9 25
LE                   : 44
LET                  : 28
LOOP                 : 24
LPAREN               : 8 9 19 20 47
LT                   : 43
MINUS                : 39
NEW                  : 36
NOT                  : 46
OF                   : 33
PLUS                 : 38
POOL                 : 24
RARROW               : 34 35
RBRACE               : 4 5 8 9 25
RPAREN               : 8 9 19 20 47
SEMI                 : 2 3 6 26 27 34 35
STRING               : 50
THEN                 : 23
TILDE                : 42
TIMES                : 40
TRUE                 : 51
TYPE                 : 4 4 5 8 9 14 16 34 35 36
WHILE                : 24
error                : 

Nonterminals, with rules where they appear

binding              : 28
bindings             : 28 31
cases                : 33 34
class                : 2 3
classes              : 1 2
dispatch             : 16 17 18
expr                 : 8 9 10 15 16 17 21 22 23 23 23 24 24 26 27 28 29 33 34 35 37 38 38 39 39 40 40 41 41 42 43 43 44 44 45 45 46 47
exprs                : 19 21
exprsemi             : 25 26
feature              : 6
features             : 4 5 6
formal               : 10 11 12 13 29 30 31
formals              : 8 12
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classes
    (2) classes -> . class SEMI classes
    (3) classes -> . class SEMI
    (4) class -> . CLASS TYPE INHERITS TYPE LBRACE features RBRACE
    (5) class -> . CLASS TYPE LBRACE features RBRACE

    CLASS           shift and go to state 2

    classes                        shift and go to state 3
    program                        shift and go to state 1
    class                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (4) class -> CLASS . TYPE INHERITS TYPE LBRACE features RBRACE
    (5) class -> CLASS . TYPE LBRACE features RBRACE

    TYPE            shift and go to state 5


state 3

    (1) program -> classes .

    $end            reduce using rule 1 (program -> classes .)


state 4

    (2) classes -> class . SEMI classes
    (3) classes -> class . SEMI

    SEMI            shift and go to state 6


state 5

    (4) class -> CLASS TYPE . INHERITS TYPE LBRACE features RBRACE
    (5) class -> CLASS TYPE . LBRACE features RBRACE

    INHERITS        shift and go to state 7
    LBRACE          shift and go to state 8


state 6

    (2) classes -> class SEMI . classes
    (3) classes -> class SEMI .
    (2) classes -> . class SEMI classes
    (3) classes -> . class SEMI
    (4) class -> . CLASS TYPE INHERITS TYPE LBRACE features RBRACE
    (5) class -> . CLASS TYPE LBRACE features RBRACE

    $end            reduce using rule 3 (classes -> class SEMI .)
    CLASS           shift and go to state 2

    classes                        shift and go to state 9
    class                          shift and go to state 4

state 7

    (4) class -> CLASS TYPE INHERITS . TYPE LBRACE features RBRACE

    TYPE            shift and go to state 10


state 8

    (5) class -> CLASS TYPE LBRACE . features RBRACE
    (6) features -> . feature SEMI features
    (7) features -> .
    (8) feature -> . IDENTIFIER LPAREN formals RPAREN COLON TYPE LBRACE expr RBRACE
    (9) feature -> . IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expr RBRACE
    (10) feature -> . formal LARROW expr
    (11) feature -> . formal
    (14) formal -> . IDENTIFIER COLON TYPE

    RBRACE          reduce using rule 7 (features -> .)
    IDENTIFIER      shift and go to state 13

    formal                         shift and go to state 12
    features                       shift and go to state 14
    feature                        shift and go to state 11

state 9

    (2) classes -> class SEMI classes .

    $end            reduce using rule 2 (classes -> class SEMI classes .)


state 10

    (4) class -> CLASS TYPE INHERITS TYPE . LBRACE features RBRACE

    LBRACE          shift and go to state 15


state 11

    (6) features -> feature . SEMI features

    SEMI            shift and go to state 16


state 12

    (10) feature -> formal . LARROW expr
    (11) feature -> formal .

    LARROW          shift and go to state 17
    SEMI            reduce using rule 11 (feature -> formal .)


state 13

    (8) feature -> IDENTIFIER . LPAREN formals RPAREN COLON TYPE LBRACE expr RBRACE
    (9) feature -> IDENTIFIER . LPAREN RPAREN COLON TYPE LBRACE expr RBRACE
    (14) formal -> IDENTIFIER . COLON TYPE

    LPAREN          shift and go to state 19
    COLON           shift and go to state 18


state 14

    (5) class -> CLASS TYPE LBRACE features . RBRACE

    RBRACE          shift and go to state 20


state 15

    (4) class -> CLASS TYPE INHERITS TYPE LBRACE . features RBRACE
    (6) features -> . feature SEMI features
    (7) features -> .
    (8) feature -> . IDENTIFIER LPAREN formals RPAREN COLON TYPE LBRACE expr RBRACE
    (9) feature -> . IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expr RBRACE
    (10) feature -> . formal LARROW expr
    (11) feature -> . formal
    (14) formal -> . IDENTIFIER COLON TYPE

    RBRACE          reduce using rule 7 (features -> .)
    IDENTIFIER      shift and go to state 13

    formal                         shift and go to state 12
    features                       shift and go to state 21
    feature                        shift and go to state 11

state 16

    (6) features -> feature SEMI . features
    (6) features -> . feature SEMI features
    (7) features -> .
    (8) feature -> . IDENTIFIER LPAREN formals RPAREN COLON TYPE LBRACE expr RBRACE
    (9) feature -> . IDENTIFIER LPAREN RPAREN COLON TYPE LBRACE expr RBRACE
    (10) feature -> . formal LARROW expr
    (11) feature -> . formal
    (14) formal -> . IDENTIFIER COLON TYPE

    RBRACE          reduce using rule 7 (features -> .)
    IDENTIFIER      shift and go to state 13

    formal                         shift and go to state 12
    feature                        shift and go to state 11
    features                       shift and go to state 22

state 17

    (10) feature -> formal LARROW . expr
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr AT TYPE DOT dispatch
    (17) expr -> . expr DOT dispatch
    (18) expr -> . dispatch
    (23) expr -> . IF expr THEN expr ELSE expr FI
    (24) expr -> . WHILE expr LOOP expr POOL
    (25) expr -> . LBRACE exprsemi RBRACE
    (28) expr -> . LET binding bindings IN expr
    (33) expr -> . CASE expr OF cases ESAC
    (36) expr -> . NEW TYPE
    (37) expr -> . ISVOID expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIVIDE expr
    (42) expr -> . TILDE expr
    (43) expr -> . expr LT expr
    (44) expr -> . expr LE expr
    (45) expr -> . expr EQUALS expr
    (46) expr -> . NOT expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . IDENTIFIER
    (49) expr -> . INTEGER
    (50) expr -> . STRING
    (51) expr -> . TRUE
    (52) expr -> . FALSE
    (19) dispatch -> . IDENTIFIER LPAREN exprs RPAREN
    (20) dispatch -> . IDENTIFIER LPAREN RPAREN

    IDENTIFIER      shift and go to state 32
    IF              shift and go to state 35
    WHILE           shift and go to state 24
    LBRACE          shift and go to state 36
    LET             shift and go to state 39
    CASE            shift and go to state 27
    NEW             shift and go to state 25
    ISVOID          shift and go to state 28
    TILDE           shift and go to state 29
    NOT             shift and go to state 33
    LPAREN          shift and go to state 34
    INTEGER         shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 26
    FALSE           shift and go to state 37

    expr                           shift and go to state 38
    dispatch                       shift and go to state 23

state 18

    (14) formal -> IDENTIFIER COLON . TYPE

    TYPE            shift and go to state 40


state 19

    (8) feature -> IDENTIFIER LPAREN . formals RPAREN COLON TYPE LBRACE expr RBRACE
    (9) feature -> IDENTIFIER LPAREN . RPAREN COLON TYPE LBRACE expr RBRACE
    (12) formals -> . formal COMMA formals
    (13) formals -> . formal
    (14) formal -> . IDENTIFIER COLON TYPE

    RPAREN          shift and go to state 41
    IDENTIFIER      shift and go to state 43

    formal                         shift and go to state 42
    formals                        shift and go to state 44

state 20

    (5) class -> CLASS TYPE LBRACE features RBRACE .

    SEMI            reduce using rule 5 (class -> CLASS TYPE LBRACE features RBRACE .)


state 21

    (4) class -> CLASS TYPE INHERITS TYPE LBRACE features . RBRACE

    RBRACE          shift and go to state 45


state 22

    (6) features -> feature SEMI features .

    RBRACE          reduce using rule 6 (features -> feature SEMI features .)


state 23

    (18) expr -> dispatch .

    AT              reduce using rule 18 (expr -> dispatch .)
    DOT             reduce using rule 18 (expr -> dispatch .)
    PLUS            reduce using rule 18 (expr -> dispatch .)
    MINUS           reduce using rule 18 (expr -> dispatch .)
    TIMES           reduce using rule 18 (expr -> dispatch .)
    DIVIDE          reduce using rule 18 (expr -> dispatch .)
    LT              reduce using rule 18 (expr -> dispatch .)
    LE              reduce using rule 18 (expr -> dispatch .)
    EQUALS          reduce using rule 18 (expr -> dispatch .)
    SEMI            reduce using rule 18 (expr -> dispatch .)
    COMMA           reduce using rule 18 (expr -> dispatch .)
    IN              reduce using rule 18 (expr -> dispatch .)
    LOOP            reduce using rule 18 (expr -> dispatch .)
    OF              reduce using rule 18 (expr -> dispatch .)
    RPAREN          reduce using rule 18 (expr -> dispatch .)
    THEN            reduce using rule 18 (expr -> dispatch .)
    POOL            reduce using rule 18 (expr -> dispatch .)
    ELSE            reduce using rule 18 (expr -> dispatch .)
    RBRACE          reduce using rule 18 (expr -> dispatch .)
    FI              reduce using rule 18 (expr -> dispatch .)


state 24

    (24) expr -> WHILE . expr LOOP expr POOL
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr AT TYPE DOT dispatch
    (17) expr -> . expr DOT dispatch
    (18) expr -> . dispatch
    (23) expr -> . IF expr THEN expr ELSE expr FI
    (24) expr -> . WHILE expr LOOP expr POOL
    (25) expr -> . LBRACE exprsemi RBRACE
    (28) expr -> . LET binding bindings IN expr
    (33) expr -> . CASE expr OF cases ESAC
    (36) expr -> . NEW TYPE
    (37) expr -> . ISVOID expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIVIDE expr
    (42) expr -> . TILDE expr
    (43) expr -> . expr LT expr
    (44) expr -> . expr LE expr
    (45) expr -> . expr EQUALS expr
    (46) expr -> . NOT expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . IDENTIFIER
    (49) expr -> . INTEGER
    (50) expr -> . STRING
    (51) expr -> . TRUE
    (52) expr -> . FALSE
    (19) dispatch -> . IDENTIFIER LPAREN exprs RPAREN
    (20) dispatch -> . IDENTIFIER LPAREN RPAREN

    IDENTIFIER      shift and go to state 32
    IF              shift and go to state 35
    WHILE           shift and go to state 24
    LBRACE          shift and go to state 36
    LET             shift and go to state 39
    CASE            shift and go to state 27
    NEW             shift and go to state 25
    ISVOID          shift and go to state 28
    TILDE           shift and go to state 29
    NOT             shift and go to state 33
    LPAREN          shift and go to state 34
    INTEGER         shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 26
    FALSE           shift and go to state 37

    expr                           shift and go to state 46
    dispatch                       shift and go to state 23

state 25

    (36) expr -> NEW . TYPE

    TYPE            shift and go to state 47


state 26

    (51) expr -> TRUE .

    AT              reduce using rule 51 (expr -> TRUE .)
    DOT             reduce using rule 51 (expr -> TRUE .)
    PLUS            reduce using rule 51 (expr -> TRUE .)
    MINUS           reduce using rule 51 (expr -> TRUE .)
    TIMES           reduce using rule 51 (expr -> TRUE .)
    DIVIDE          reduce using rule 51 (expr -> TRUE .)
    LT              reduce using rule 51 (expr -> TRUE .)
    LE              reduce using rule 51 (expr -> TRUE .)
    EQUALS          reduce using rule 51 (expr -> TRUE .)
    SEMI            reduce using rule 51 (expr -> TRUE .)
    COMMA           reduce using rule 51 (expr -> TRUE .)
    IN              reduce using rule 51 (expr -> TRUE .)
    LOOP            reduce using rule 51 (expr -> TRUE .)
    OF              reduce using rule 51 (expr -> TRUE .)
    RPAREN          reduce using rule 51 (expr -> TRUE .)
    THEN            reduce using rule 51 (expr -> TRUE .)
    POOL            reduce using rule 51 (expr -> TRUE .)
    ELSE            reduce using rule 51 (expr -> TRUE .)
    RBRACE          reduce using rule 51 (expr -> TRUE .)
    FI              reduce using rule 51 (expr -> TRUE .)


state 27

    (33) expr -> CASE . expr OF cases ESAC
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr AT TYPE DOT dispatch
    (17) expr -> . expr DOT dispatch
    (18) expr -> . dispatch
    (23) expr -> . IF expr THEN expr ELSE expr FI
    (24) expr -> . WHILE expr LOOP expr POOL
    (25) expr -> . LBRACE exprsemi RBRACE
    (28) expr -> . LET binding bindings IN expr
    (33) expr -> . CASE expr OF cases ESAC
    (36) expr -> . NEW TYPE
    (37) expr -> . ISVOID expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIVIDE expr
    (42) expr -> . TILDE expr
    (43) expr -> . expr LT expr
    (44) expr -> . expr LE expr
    (45) expr -> . expr EQUALS expr
    (46) expr -> . NOT expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . IDENTIFIER
    (49) expr -> . INTEGER
    (50) expr -> . STRING
    (51) expr -> . TRUE
    (52) expr -> . FALSE
    (19) dispatch -> . IDENTIFIER LPAREN exprs RPAREN
    (20) dispatch -> . IDENTIFIER LPAREN RPAREN

    IDENTIFIER      shift and go to state 32
    IF              shift and go to state 35
    WHILE           shift and go to state 24
    LBRACE          shift and go to state 36
    LET             shift and go to state 39
    CASE            shift and go to state 27
    NEW             shift and go to state 25
    ISVOID          shift and go to state 28
    TILDE           shift and go to state 29
    NOT             shift and go to state 33
    LPAREN          shift and go to state 34
    INTEGER         shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 26
    FALSE           shift and go to state 37

    expr                           shift and go to state 48
    dispatch                       shift and go to state 23

state 28

    (37) expr -> ISVOID . expr
    (15) expr -> . IDENTIFIER LARROW expr
    (16) expr -> . expr AT TYPE DOT dispatch
    (17) expr -> . expr DOT dispatch
    (18) expr -> . dispatch
    (23) expr -> . IF expr THEN expr ELSE expr FI
    (24) expr -> . WHILE expr LOOP expr POOL
    (25) expr -> . LBRACE exprsemi RBRACE
    (28) expr -> . LET binding bindings IN expr
    (33) expr -> . CASE expr OF cases ESAC
    (36) expr -> . NEW TYPE
    (37) expr -> . ISVOID expr
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIVIDE expr
    (42) expr -> . TILDE expr
    (43) expr -> . expr LT expr
    (44) expr -> . expr LE expr
    (45) expr -> . expr EQUALS expr
    (46) expr -> . NOT expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . IDENTIFIER
    (49) expr -> . INTEGER
    (50) expr -> . STRING
    (51) expr -> . TRUE
    (52) expr -> . FALSE
    (19) dispatch -> . IDENTIFIER LPAREN exprs RPAREN
    (20) dispatch -> . IDENTIFIER LPAREN RPAREN
